# gs1

./: .gitignore  AGENTS.md  AI_WORK_PIPELINE_SKILLS.md  AUDIO_ASSET_PLAN.md  CMakeLists.txt  COMPILE_TIME_RUNTIME_STATE_PLAN.md  CONTENT_AUTHORING_CONTRACT.md  DIRTY_STATE_SYNC_IMPLEMENTATION_PLAN.md  ECS_REFACTOR_PLAN.md  GAMEPLAY_DLL_SYSTEM_AUDIT.md  GAME_STRUCTURE.md  GAME_SYSTEM_DESIGN_V1.md  GDD.md  HOST_COMMAND_ABI_REFACTOR_PLAN.md  INLINE_TYPED_GAMEPLAY_MESSAGE_REFACTOR_PLAN.md  MISSING_DEFINITION_DESCRIPTIONS.md  PROGRESSION_REFACTOR_PLAN.md  RUNTIME_MESSAGE_INVENTORY.md  RUNTIME_MESSAGE_REMOVAL_REMAINING_WORK.md  SITE_SESSION_PLAYABILITY_REVIEW.md  STATE_RESOLVER_ARCHITECTURE_PLAN.md  STATE_TAXONOMY_INVENTORY.md  SYSTEM_DESIGN_STATUS.md  SYSTEM_TEST_COVERAGE.md  SYSTEM_TEST_MANUAL.md  TASK_BOARD_OPEN_QUESTIONS.md  TODO_REFACTOR.md  ecology_system_perf_plan.md  launch_visual_game.ps1  refactor.md
engines/: guideline.md
engines/godot/: guideline.md
include/: guideline.md
include/gs1/: export.h  game_api.h  guideline.md  state_view.h  status.h  system_test_api.h  types.h
project/: guideline.md  shared_framework_process.md
project/adapter_metadata/: godot_prewarm.toml  godot_prewarm_plan.md  guideline.md  modifier_presets.toml  reputation_unlocks.toml  technology_nodes.toml
project/content/: craft_recipes.toml  excavation_tables.toml  gameplay_tuning.toml  guideline.md  initial_unlocked_plants.toml  items.toml  modifier_presets.toml  phone_listings.toml  plants.toml  reputation_unlocks.toml  site_actions.toml  sites.toml  structures.toml  task_templates.toml  technology_nodes.toml  technology_tiers.toml
scripts/: build_gameplay_dll.ps1  build_process_test_host.ps1  build_smoke_host.ps1  build_system_test_host.ps1  build_visual_smoke_host.ps1  common.ps1  guideline.md  run_process_tests.ps1  run_smoke.ps1  run_system_tests.ps1  run_visual_smoke.ps1  setup_godot_build.ps1
shared_framework/: UPSTREAM_VERSION.md  guideline.md
src/: gs1_pch.h  guideline.md
src/app/: app_state_machine.h  campaign_factory.cpp  campaign_factory.h  campaign_presentation_ops.cpp  campaign_presentation_ops.h  game_api.cpp  game_app.h  game_bootstrap.h  game_loop.h  game_presentation_coordinator.cpp  game_presentation_coordinator.h  guideline.md  regional_map_presentation_publisher.cpp  scene_coordinator.h  site_presentation_ops.cpp  site_presentation_ops.h  site_run_factory.cpp  site_run_factory.h
src/campaign/: campaign_progression_state.h  campaign_state.h  faction_progress_state.h  guideline.md  loadout_planner_state.h  technology_state.h
src/commands/: command_dispatcher.cpp  command_dispatcher.h  command_ids.h  game_command.h
src/content/: content_database.h  content_index.h  content_loader.cpp  content_loader.h  content_lookup.cpp  content_validator.cpp  content_validator.h  guideline.md  prototype_content.cpp  prototype_content.h
src/events/: engine_feedback_event.h  guideline.md  runtime_event.h
src/host/: adapter_config_loader.cpp  adapter_config_loader.h  adapter_metadata_catalog.cpp  adapter_metadata_catalog.h  guideline.md  runtime_dll_loader.cpp  runtime_dll_loader.h  runtime_message_pump.cpp  runtime_message_pump.h  runtime_projection_state.cpp  runtime_projection_state.h  runtime_session.cpp  runtime_session.h
src/messages/: game_message.h  guideline.md  message_dispatcher.cpp  message_dispatcher.h  message_ids.h
src/runtime/: command_queue.h  engine_command_queue.h  engine_feedback_buffer.h  engine_message_queue.h  fixed_step_runner.h  game_runtime.cpp  game_runtime.h  game_state.h  game_state_view.cpp  game_state_view.h  game_systems.h  gameplay_message_traits.h  guideline.md  id_allocator.h  input_snapshot.h  message_queue.h  presentation_runtime_state.h  random_service.h  runtime_clock.h  runtime_split_state_compat.h  runtime_state_access.h  shared_framework_contracts.h  site_protection_presentation_state.h  state_manager.cpp  state_manager.h  state_set.h  system_interface.h  system_pack.h  type_list.h  typed_gameplay_dispatch_traits.h  ui_presentation_state.h
src/site/: action_state.h  contractor_state.h  craft_logic.cpp  craft_logic.h  craft_state.h  device_interaction_logic.h  device_weather_contribution_state.h  economy_state.h  event_state.h  guideline.md  inventory_state.h  inventory_storage.cpp  inventory_storage.h  local_weather_resolve_state.h  modifier_state.h  phone_panel_state.h  placement_preview.h  plant_weather_contribution_state.h  site_objective_state.h  site_projection_update_flags.h  site_run_state.h  site_world.cpp  site_world.h  site_world_access.h  site_world_components.h  task_board_state.h  tile_footprint.h  tile_grid_state.h  weather_contribution_logic.h  weather_state.h
src/support/: currency.h  excavation_types.h  guideline.md  id_types.h  packed_id_index.h  site_objective_types.h
src/testing/: guideline.md  system_test_asset.cpp  system_test_asset.h  system_test_registry.cpp  system_test_registry.h
src/ui/: guideline.md  hud_view_model.h  inspect_panel_view_model.h  notification_view_model.h  phone_view_model.h  regional_map_view_model.h  ui_presenter.h  ui_state.h
tests/: guideline.md
tests/process/: game_process_registry.cpp  game_process_registry.h  game_process_test_host_main.cpp  guideline.md
tests/runtime/: game_runtime_command_chain_test.cpp  game_runtime_message_chain_test.cpp  game_runtime_performance_test.cpp  game_runtime_projection_test.cpp  game_runtime_semantic_message_stack_test.cpp  godot_debug_http_protocol_test.cpp  godot_director_scene_policy_test.cpp  godot_regional_map_click_policy_test.cpp  godot_regional_site_selection_policy_test.cpp  guideline.md  local_weather_perf_probe.cpp  runtime_system_trait_metadata_test.cpp  site_system_command_flow_test.cpp  site_system_message_flow_test.cpp  smoke_engine_host_threading_test.cpp  state_manager_test.cpp  timed_modifier_projection_test.cpp
tests/smoke/: guideline.md  runtime_dll_loader.cpp  runtime_dll_loader.h  smoke_engine_host.h  (+15 more)
tools/: gcs_common.ps1  gcs_content.json  gcs_workflow.md  guideline.md  push_gcs_content.ps1  sync_gcs_content.ps1
(+305 files in other folders)
